# vmiutil

./: CMakeLists.txt  README.md  index.html  ivmimageformatreader.cpp  ivmimageformatreader.h  kaitai-gen.sh  main.cpp  memory_stream_wrapper.h  qcow2format.cpp  qcow2format.h  vmiutil.js  vmiutil.wasm  web-build.sh
formats/: qcow2format.cpp  qcow2format.h
kaitai/: exceptions.h  qcow2.cpp  qcow2.h  qcow2.yml
kaitai-generated/: qcow2.cpp  qcow2.h
